--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/joelsaju20/neon-muscic.git"
+    "url": "git+ https://git.heroku.com/calm-island-63804"
   },
   "engines": {
     "node": "14.x"
